# mygit

./: .gitignore  .mygitignore  main.py  pyproject.toml  to_be_deleted.txt
commands/: init.py
src/: index.py  repository.py
src/commands/: cat_file_cmd.py  hash_object_cmd.py  init_cmd.py  log_cmd.py  status_cmd.py  update_index_cmd.py  write_tree_cmd.py
src/objects/: blob.py  commit.py  object.py  tree.py
src/utils/: config.py  constants.py  diff.py  hash.py
tests/: test_blob.py  test_config.py  test_hash.py  test_init_cmd.py  test_status_cmd.py
